<resources>
    <string name="app_name">容儿专用</string>
    <string name="login_page">登录</string>
    <string name="login">登录</string>
    <string name="account_tips">账户:</string>
    <string name="password_tips">密码:</string>
    <string name="video_select">选择</string>
    <string name="video_start">开始</string>
    <string name="video_pause">暂停</string>
    <string name="video_resume">重新</string>
    <string name="asMaster">主设备</string>
    <string name="asSlave">从设备</string>
</resources>